karakeep/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ghcr.io/karakeep-app/karakeep:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: web-storage
          mountPath: /data
      volumes:
      - name: web-storage
        persistentVolumeClaim:
          claimName: karakeep-web-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: personal
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 3000
